--- a/index.html
+++ b/index.html
@@ -14,40 +14,28 @@
           <div id="box-title">
             <h1>Hello, World</h1>
           </div>
-          <div id="box-button">
-            <img id="badge" src="https://img.shields.io/badge/-Download%20CV-pink?style=for-the-badge"/>
-          </div>
           <img id="box-img" src="assets/img/about-img2.svg" />
           <div id="text-box">
-            <p>
               My name is Ryan. I'm a frontend developer with a degree in Data
               Analytics.
-            </p>
-            <div style="padding: 0.75rem; text-align: center">
-              <img id="badge"
-                src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white" />
-              <img id="badge"
-                src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white" />
-              <img id="badge"
-                src="https://img.shields.io/badge/typescript-%23007ACC.svg?style=for-the-badge&logo=typescript&logoColor=white" />
-            </div>
-            <p>
+              <div style ="text-align: center;">
+                <img id="badge" src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white" />
+                <img id="badge" src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white" />
+                <img id="badge" src="https://img.shields.io/badge/typescript-%23007ACC.svg?style=for-the-badge&logo=typescript&logoColor=white" />
+              </div>
               I'm working on going full stack! For that, I am getting
               comfortable with more technologies:
-            </p>
-            <div style="padding: 0.75rem; text-align: center">
-              <img id="badge"
-                src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54" />
-              <img id="badge"
-                src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=c-sharp&logoColor=white" />
-            </div>
-          </div>
+              <div style="text-align: center;">
+                <img id="badge" src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54" />
+                <img id="badge" src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=c-sharp&logoColor=white" />    
+              </div>
           </div>
         </div>
       </div>
       <footer id="footer">
         <img id="social" src="assets/img/github.png" height="50%" />
         <img id="social" src="assets/img/twitter.png" height="50%" />
+        <img id="badge" src="https://img.shields.io/badge/-Download%20CV-pink?style=for-the-badge"/>
       </footer>
     </div>
   </body>
