--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TestingSpace</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="_sass/style.scss">
   </head>
   <body>
     <footer class="footer">
@@ -27,6 +26,6 @@
         </p>
       </div>
     </footer>
-    <script type="text/javascript" src="lib/main.js"></script>
+    <script type="text/javascript" src="_typescript/main.tsx"></script>
   </body>
 </html>
