--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="_sass/style.scss">
   </head>
   <body>
+    <div id="alert"></div>
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
@@ -26,6 +27,6 @@
         </p>
       </div>
     </footer>
-    <script type="text/javascript" src="_typescript/main.tsx"></script>
+    <script type="module" src="_typescript/main.tsx"></script>
   </body>
 </html>
