--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
         </div>
       </div>
     </div>
-    <div class="bg-white shadow overflow-hidden sm:rounded-lg">
+    <div class="bg-white overflow-hidden shadow sm:rounded-lg">
       <div class="px-4 py-5 sm:px-6">
         <h3 class="text-lg leading-6 font-medium text-gray-900">Applicant Information</h3>
         <p class="mt-1 max-w-2xl text-sm text-gray-500">Personal details and application.</p>
@@ -136,6 +136,7 @@
         </dl>
       </div>
     </div>
+    
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
