--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TestingSpace</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-    <link rel="stylesheet" href="style.scss">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico" />
+    <link rel="stylesheet" href="../_sass/style.scss">
   </head>
   <body>
     <div id="devalert"></div>
@@ -96,6 +96,6 @@
         </p>
       </div>
     </footer>
-    <script type="module" src="main.tsx"></script>
+    <script type="module" src="../_typescript/index.tsx"></script>
   </body>
 </html>
