--- a/index.html
+++ b/index.html
@@ -1,36 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TestingSpace</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.df2340ab.ico">
-    <link rel="stylesheet" href="/index.e5a92254.css">
-  </head>
-  <body>
-    <div id="devalert"></div>
-    <footer class="footer">
-      <div class="bg-gray-100 text-center py-10">
-        <p>
-          <strong>TestingSpace</strong> by <a href="https://dawes.cc">Ryan Dawes</a>. The source code is licensed
-          <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
-        <br>
-        </p><div class="socials">
-          <a href="https://tailwindcss.com/" target="_blank">
-            <img class="social-button" id="tailwind"></a>
-          <a href="https://reactjs.org/" target="_blank">
-            <img class="social-button" id="react"></a>
-        </div>
-        <div class="socials">
-          <a href="https://github.com/dawesry/" target="_blank">
-            <img class="social-button" id="github"></a>
-          <a href="https://twitter.com/dawesinho/" target="_blank">
-            <img class="social-button" id="twitter"></a>
-        </div>
-        <p></p>
-      </div>
-    </footer>
-    <script src="/index.9cefaf75.js" defer=""></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><title>TestingSpace</title><link rel="icon" type="image/x-icon" href="/favicon.598e08c4.ico"><link rel="stylesheet" href="/index.f2710f22.css"></head><body> <div id="devalert"></div> <footer class="footer"> <div class="bg-gray-100 py-10 text-center"> <p> <strong>TestingSpace</strong> by <a href="https://dawes.cc">Ryan Dawes</a>. The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. <br> </p><div class="socials"> <a href="https://tailwindcss.com/" target="_blank"> <img class="social-button" id="tailwind"></a> <a href="https://reactjs.org/" target="_blank"> <img class="social-button" id="react"></a> </div> <div class="socials"> <a href="https://github.com/dawesry/" target="_blank"> <img class="social-button" id="github"></a> <a href="https://twitter.com/dawesinho/" target="_blank"> <img class="social-button" id="twitter"></a> </div> <p></p> </div> </footer> <script type="module" src="/index.60fdc046.js"></script> </body></html>
